# FCU-X-Plane-Plugin

./: .gitignore  CMakeLists.txt  README.md  build.bat  clean.bat
.claude/: settings.local.json
.github/: CICD.md
.github/workflows/: build.yml
src/: main.cpp
